# api

./: README.md  fly.toml  pyproject.toml  tox.ini
.github/: pull_request_template.md
.github/workflows/: deploy.yaml  test.yaml
app/: __init__.py  __main__.py
app/api/: deps.py
app/api/v1/: __init__.py  client.py  grades.py  schedule.py
app/azure/: session.py
app/core/: __init__.py  config.py
app/pronote/: session.py
app/schemas/: __init__.py  client.py  schedule.py
app/static/schedule/: eleve.css
app/templates/: schedule.html  tailwind.config.js
app/utils/: grades.py  image.py  schedule.py
scripts/: encrypt_passwords.py
tests/: conftest.py  helpers.py
tests/app/api/v1/: test_schedule.py
tests/app/utils/: test_data.py
tests/plugins/: env_vars.py
